--- a/css/DongHoBamGio.Css
+++ b/css/DongHoBamGio.Css
@@ -4,7 +4,7 @@
 body{
     margin: 0px;
     padding: 0px;
-    background-color: orange;
+    background-color: #FF9240;
 }
 .container{
     width: 50%;
@@ -16,7 +16,7 @@ body{
     
 } 
 h2{
-    color: white;
+    color: #ffffa9;
     border: 1px solid #E0FFFF;
     margin: 0px;
     padding: 20px;
@@ -30,7 +30,7 @@ span{
     position: relative;
     top: 40px;
     margin-right: 5px;
-    color: white;
+    color:#ffffa9;
 } 
 
 .button{
@@ -41,18 +41,29 @@ span{
     left: 31.5%;
     margin: 80px auto;
     margin-right: 40px;
-    border: 1px solid snow;
-    color: white;
+    border: 2px solid white;
+    color: #ffffa9;
     padding-top: 10px;
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 10px;
-    border-radius: 7px;
+    border-radius: 5px;
 }
 .button:hover{
-    background-color: white;
-    color: orange;
+    background-color: #ffffa9;
+    color: #FF9240;
     transition: 1s;
     cursor: pointer;
-    border-radius: 5px;
+    border-radius: 10px;
+}
+@media screen and (max-width: 1028px) {
+    .container{
+        width: 965px;
+        height: 300px;
+        /* background-color: orange; */
+        border: 1px solid #E0FFFF;
+        margin: 300px auto;
+        text-align: center;
+        
+    } 
 }
