--- a/css/DongHoBamGio.Css
+++ b/css/DongHoBamGio.Css
@@ -57,6 +57,10 @@ span{
     border-radius: 10px;
 }
 @media screen and (max-width: 1028px) {
+    html{
+        width: auto;
+        height: auto;
+    }
     .container{
         width: 965px;
         height: 300px;
@@ -66,4 +70,44 @@ span{
         text-align: center;
         
     } 
+    h2{
+        color: #ffffa9;
+        border: 1px solid #E0FFFF;
+        margin: 0px;
+        padding: 20px;
+        font-size: 26px;
+        font-weight: bold;
+    }
+    span{
+        font-size: 26px;
+        font-weight: bold;
+        position: relative;
+        top: 40px;
+        margin-right: 5px;
+        color:#ffffa9;
+    } 
+    
+    .button{
+        font-size: 26px;
+        font-weight: bold;
+        float: left;
+        position: relative;
+        left: 31.5%;
+        margin: 80px auto;
+        margin-right: 40px;
+        border: 2px solid white;
+        color: #ffffa9;
+        padding-top: 10px;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-bottom: 10px;
+        border-radius: 5px;
+    }
+    .button:hover{
+        background-color: #ffffa9;
+        color: #FF9240;
+        transition: 1s;
+        cursor: pointer;
+        border-radius: 10px;
+    }
 }
