--- a/css/DongHoBamGio.Css
+++ b/css/DongHoBamGio.Css
@@ -38,7 +38,7 @@ span{
     font-weight: bold;
     float: left;
     position: relative;
-    left: 31.5%;
+    left: 29%;
     margin: 80px auto;
     margin-right: 40px;
     border: 2px solid white;
@@ -56,28 +56,17 @@ span{
     cursor: pointer;
     border-radius: 10px;
 }
-@media screen and (max-width: 1028px) {
-    html{
-        width: auto;
-        height: auto;
-    }
+@media screen and (max-width: 1080px) {
+
     .container{
-        width: 965px;
-        height: 300px;
+        width: 414px;
+        height: 914px;
         /* background-color: orange; */
-        border: 1px solid #E0FFFF;
+        border: 1px solid #ffF;
         margin: 300px auto;
         text-align: center;
         
     } 
-    h2{
-        color: #ffffa9;
-        border: 1px solid #E0FFFF;
-        margin: 0px;
-        padding: 20px;
-        font-size: 26px;
-        font-weight: bold;
-    }
     span{
         font-size: 26px;
         font-weight: bold;
@@ -92,15 +81,12 @@ span{
         font-weight: bold;
         float: left;
         position: relative;
-        left: 31.5%;
+        left: 30px;
         margin: 80px auto;
         margin-right: 40px;
         border: 2px solid white;
+        padding: 5px 10px;
         color: #ffffa9;
-        padding-top: 10px;
-        padding-left: 20px;
-        padding-right: 20px;
-        padding-bottom: 10px;
         border-radius: 5px;
     }
     .button:hover{
@@ -110,4 +96,5 @@ span{
         cursor: pointer;
         border-radius: 10px;
     }
+   
 }
